# sap-rfc-mcp-server

./: .env.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  init.py  pyproject.toml  requirements.txt  setup_dev.py  test_http_server.py
docs/: CLIENT_ARCHITECTURE_IMPLEMENTATION.md  COMPLETE_SETUP_GUIDE.md  DIRECT_SAP_ACCESS_REPORT.md  FUNCTION_NAME_FIX_REPORT.md  INTEGRATION_SUCCESS.md  MCP_CLIENT_ARCHITECTURE_ANALYSIS.md  PORT_MANAGEMENT_GUIDE.md  PORT_MANAGEMENT_SUMMARY.md  README.md  T000_TEST_ANALYSIS.md  TABLE_ACCESS_REPAIR_SUMMARY.md  TROUBLESHOOTING.md  VSCODE_INTEGRATION_GUIDE.md
examples/: basic_usage.py
sap_rfc_mcp_server/: __init__.py  config.py  http_server.py  metadata_cache.py  metadata_manager.py  minimal_server.py  rfc_table_reader.py  sap_client.py  sap_security_manager.py  secure_config.py  server.py  server_backup.py
tests/: conftest.py  test_metadata_manager.py
tools/: README.md  check_config.py  check_prerequisites.py  check_sapnwrfc_sdk.py  client_server_demo.py  manage_mcp_ports.ps1  mcp_architecture_analysis.json  mcp_client_analysis.py  port_manager.py  rfc_metadata_client.py  sap_dev_helper.py  setup_dev.py  start_mcp_smart.py  start_sap_mcp_server.ps1  test_direct_sap.py  test_mcp_config.py  test_mcp_http_quick.py  test_metadata_performance_http_stdio.py  test_metadata_stdio.py  test_table_access_verification.py  test_vscode_integration.py  verify_mcp_integration.py
